# bluecatcsv

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml.example  import.py  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  CSV_GUIDE.md  EXPORT_GUIDE.md  MODULE_GUIDE.md  OPERATIONS_GUIDE.md  PERFORMANCE.md  QUICKSTART.md  README.md  SELF_TEST_GUIDE.md  TUTORIAL.md  VALIDATION_GUIDE.md
reference/: API_Guide.md
samples/: README.md  access_right.csv  access_right_create.csv  access_right_delete.csv  access_right_update.csv  acl.csv  alias_record.csv  combined_all_resources.csv  device.csv  device_address.csv  device_subtype.csv  device_type.csv  dhcp_deployment_role.csv  dhcpv4_client_deployment_option.csv  dhcpv4_service_deployment_option.csv  dns_deployment_role.csv  dns_zone.csv  external_host_record.csv  generic_record.csv  host_record.csv  ip4_address.csv  ip4_block.csv  ip4_group.csv  ip4_network.csv  ip4_network_with_udf.csv  ip6_address.csv  ip6_block.csv  ip6_network.csv  ipv4_dhcp_range.csv  ipv6_dhcp_range.csv  location.csv  location_associations.csv  mac_address.csv  mac_pool.csv  mx_record.csv  resource_tag.csv  srv_record.csv  tag.csv  tag_group.csv  test_config.yaml  (+4 more)
scripts/: generate_dhcp_options.py  lint_self_test.py  validate_remaining_samples.sh  validate_samples.sh  validate_self_test.py  verify_dhcp_options.py
tests/: DEPLOYMENT_ROLES_ENDPOINT_VALIDATION.md  DEPLOYMENT_ROLES_REAL_TEST_RESULTS.md  DEPLOYMENT_ROLES_TEST_RESULTS.md  DNS_DEPLOYMENT_ROLES_UPDATE.md  README.md  conftest.py  self-test-all-types.csv  self-test-comprehensive.csv  self-test-dangerous.csv  self-test-dhcp-types.csv  self-test-dns-types.csv  self-test-ip-types.csv  self-test-simple.csv  test-config.yaml  test-dhcp-deployment-role.csv  test-dhcp-real-network.csv  test-dns-deployment-role-block-level.csv  test-dns-deployment-role-network-level.csv  (+5 more)
(+517 files in other folders)
